contracts/freeze/tests/snapshots/gas_snap__get_credit_line_freeze_reason_some.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "get_credit_line_freeze_reason_some",
    cpu_instructions: 57112,
    memory_bytes: 8546,
}
