contracts/freeze/tests/snapshots/gas_snap__get_draws_freeze_reason_none.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "get_draws_freeze_reason_none",
    cpu_instructions: 50288,
    memory_bytes: 7457,
}
