contracts/freeze/tests/snapshots/gas_snap__is_borrower_frozen_expired.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "is_borrower_frozen_expired",
    cpu_instructions: 55654,
    memory_bytes: 8528,
}
