contracts/freeze/tests/snapshots/gas_snap__is_credit_line_frozen_false.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "is_credit_line_frozen_false",
    cpu_instructions: 30600,
    memory_bytes: 5495,
}
