contracts/freeze/tests/snapshots/gas_snap__is_credit_line_frozen_true.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "is_credit_line_frozen_true",
    cpu_instructions: 48878,
    memory_bytes: 7730,
}
