contracts/freeze/tests/snapshots/gas_snap__unfreeze_borrower.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "unfreeze_borrower",
    cpu_instructions: 64079,
    memory_bytes: 9890,
}
